--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Inventaire sécurisé</title>
+    <title>Inventaire Poplab</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Logo en haut à droite -->
     <img src="Images/logo.png" alt="Logo" class="logo" />
 
-    <h1>Inventaire Sécurisé</h1>
+    <h1>Inventaire Poplab</h1>
     
     <!-- Section inventaire -->
     <div id="inventorySection">
@@ -22,23 +22,30 @@
         <h2>Ajouter un nouvel article</h2>
         <input type="text" id="newItemName" placeholder="Nom de l'article">
         <button id="addButton">Ajouter</button>
-        <button id="resetButton">Réinitialiser l'inventaire</button>
     </div>
 
     <!-- Script Firebase et gestion de l'inventaire -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getFirestore, doc, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Configuration Firebase - Remplacez par vos propres valeurs depuis Firebase Console
-        const firebaseConfig = {
-            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-            authDomain: "inventaire-poplab.firebaseapp.com",
-            projectId: "inventaire-poplab",
-            storageBucket: "inventaire-poplab.firebaseapp.com",
-            messagingSenderId: "490095435720",
-            appId: "1:490095435720:web:7ce0713993e42b59086afd",
-            measurementId: "G-19DVTE3W11"
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+  authDomain: "inventaire-poplab.firebaseapp.com",
+  projectId: "inventaire-poplab",
+  storageBucket: "inventaire-poplab.firebasestorage.app",
+  messagingSenderId: "490095435720",
+  appId: "1:490095435720:web:5df23c49d4938e90086afd",
+  measurementId: "G-KSW6LY3WWN"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
         };
 
         // Initialisation Firebase et Firestore
