--- a/index.html
+++ b/index.html
@@ -25,34 +25,29 @@
     </div>
 
     <!-- Script Firebase et gestion de l'inventaire -->
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+   <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-  authDomain: "inventaire-poplab.firebaseapp.com",
-  projectId: "inventaire-poplab",
-  storageBucket: "inventaire-poplab.firebasestorage.app",
-  messagingSenderId: "490095435720",
-  appId: "1:490095435720:web:5df23c49d4938e90086afd",
-  measurementId: "G-KSW6LY3WWN"
-};
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+    authDomain: "inventaire-poplab.firebaseapp.com",
+    projectId: "inventaire-poplab",
+    storageBucket: "inventaire-poplab.firebasestorage.app",
+    messagingSenderId: "490095435720",
+    appId: "1:490095435720:web:5df23c49d4938e90086afd",
+    measurementId: "G-KSW6LY3WWN"
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-        };
-
-        // Initialisation Firebase et Firestore
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
-        console.log("Firebase initialisé :", db); // Vérifie l'initialisation
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 
         // Fonction pour charger les articles enregistrés
         function loadInventory() {
