--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         import { getFirestore, doc, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-            authDomain: "inventaire-poplab.firebaseapp.com",
-            projectId: "inventaire-poplab",
-            storageBucket: "inventaire-poplab.appspot.com",
-            messagingSenderId: "490095435720",
-            appId: "1:490095435720:web:5df23c49d4938e90086afd",
-            measurementId: "G-KSW6LY3WWN"
+             apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+  authDomain: "inventaire-poplab.firebaseapp.com",
+  projectId: "inventaire-poplab",
+  storageBucket: "inventaire-poplab.firebasestorage.app",
+  messagingSenderId: "490095435720",
+  appId: "1:490095435720:web:5df23c49d4938e90086afd",
+  measurementId: "G-KSW6LY3WWN
         };
 
         const app = initializeApp(firebaseConfig);
