--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
 
     <!-- Script Firebase et gestion de l'inventaire -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getFirestore, doc, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script>
+    <script>
+        // Configuration Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
             authDomain: "inventaire-poplab.firebaseapp.com",
@@ -39,10 +39,11 @@
             measurementId: "G-KSW6LY3WWN"
         };
 
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
+        // Initialiser Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
 
-        async function addItem() {
+        function addItem() {
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) {
                 console.error("Le nom de l'article est vide.");
@@ -55,19 +56,54 @@
                 quantity: 0
             };
 
-            try {
-                await setDoc(doc(db, "inventoryItems", newItem.id), newItem);
-                const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-                items.push(newItem);
-                localStorage.setItem('inventoryItems', JSON.stringify(items));
-                createItemElement(newItem.id, newItem.name, newItem.quantity);
-                document.getElementById('newItemName').value = '';
-            } catch (error) {
-                console.error("Erreur lors de l'ajout de l'article :", error);
-            }
+            // Ajouter l'élément à Firestore et au localStorage
+            db.collection("inventoryItems").doc(newItem.id).set(newItem)
+                .then(() => {
+                    console.log("Article ajouté avec succès à Firestore.");
+                    const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+                    items.push(newItem);
+                    localStorage.setItem('inventoryItems', JSON.stringify(items));
+                    createItemElement(newItem.id, newItem.name, newItem.quantity);
+                    document.getElementById('newItemName').value = '';
+                })
+                .catch((error) => {
+                    console.error("Erreur lors de l'ajout de l'article :", error);
+                });
         }
 
-        // Assurez-vous que le bouton est lié après que le DOM est chargé
+        function createItemElement(id, name, quantity) {
+            const inventoryDiv = document.getElementById('inventory');
+            const itemDiv = document.createElement('div');
+            itemDiv.className = 'item';
+            itemDiv.id = id;
+
+            const nameInput = document.createElement('input');
+            nameInput.type = 'text';
+            nameInput.value = name;
+            itemDiv.appendChild(nameInput);
+
+            const decrementButton = document.createElement('button');
+            decrementButton.textContent = '-';
+            itemDiv.appendChild(decrementButton);
+
+            const quantityInput = document.createElement('input');
+            quantityInput.type = 'number';
+            quantityInput.value = quantity;
+            quantityInput.min = 0;
+            quantityInput.className = 'quantity';
+            itemDiv.appendChild(quantityInput);
+
+            const incrementButton = document.createElement('button');
+            incrementButton.textContent = '+';
+            itemDiv.appendChild(incrementButton);
+
+            const removeButton = document.createElement('button');
+            removeButton.textContent = 'Supprimer';
+            itemDiv.appendChild(removeButton);
+
+            inventoryDiv.appendChild(itemDiv);
+        }
+
         document.addEventListener("DOMContentLoaded", () => {
             document.getElementById("addButton").addEventListener("click", addItem);
         });
