--- a/index.html
+++ b/index.html
@@ -22,9 +22,25 @@
         <button id="addButton">Ajouter</button>
     </div>
 
-    <!-- Script de gestion de l'inventaire -->
+    <!-- Script Firebase et gestion de l'inventaire -->
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script>
     <script>
-        // Fonction pour charger les articles depuis le localStorage
+        // Configuration Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+            authDomain: "inventaire-poplab.firebaseapp.com",
+            projectId: "inventaire-poplab",
+            storageBucket: "inventaire-poplab.appspot.com",
+            messagingSenderId: "490095435720",
+            appId: "1:490095435720:web:5df23c49d4938e90086afd",
+            measurementId: "G-KSW6LY3WWN"
+        };
+
+        // Initialiser Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
         function loadInventory() {
             const inventoryDiv = document.getElementById('inventory');
             inventoryDiv.innerHTML = '';
@@ -34,7 +50,6 @@
             });
         }
 
-        // Fonction pour créer l'élément HTML de chaque article
         function createItemElement(id, name, quantity) {
             const inventoryDiv = document.getElementById('inventory');
             const itemDiv = document.createElement('div');
@@ -48,8 +63,7 @@
             inventoryDiv.appendChild(itemDiv);
         }
 
-        // Fonction pour ajouter un nouvel article
-        function addItem() {
+        async function addItem() {
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) {
                 console.error("Le nom de l'article est vide.");
@@ -62,11 +76,20 @@
                 quantity: 1
             };
 
+            // Ajouter à Firestore
+            try {
+                await db.collection("inventoryItems").doc(newItem.id).set(newItem);
+                console.log("Article ajouté avec succès à Firestore.");
+            } catch (error) {
+                console.error("Erreur lors de l'ajout de l'article dans Firestore :", error);
+                return;
+            }
+
+            // Ajouter à localStorage et afficher
             const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
             items.push(newItem);
             localStorage.setItem('inventoryItems', JSON.stringify(items));
             createItemElement(newItem.id, newItem.name, newItem.quantity);
-
             document.getElementById('newItemName').value = ''; // Réinitialise le champ texte
         }
 
