--- a/index.html
+++ b/index.html
@@ -21,34 +21,55 @@
         <button id="addButton">Ajouter</button>
     </div>
 
-    <!-- Script Firebase et gestion de l'inventaire -->
-    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script>
     <script>
-        // Configuration Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
-            authDomain: "inventaire-poplab.firebaseapp.com",
-            projectId: "inventaire-poplab",
-            storageBucket: "inventaire-poplab.appspot.com",
-            messagingSenderId: "490095435720",
-            appId: "1:490095435720:web:5df23c49d4938e90086afd",
-            measurementId: "G-KSW6LY3WWN"
-        };
+        // Fonction pour charger les articles depuis localStorage
+        function loadInventory() {
+            const inventoryDiv = document.getElementById('inventory');
+            inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
 
-        // Initialiser Firebase et tester l'initialisation
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
+            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+            items.forEach(item => {
+                createItemElement(item.id, item.name, item.quantity);
+            });
+        }
 
-        console.log("Firebase initialisé :", firebase.apps.length > 0 ? "Oui" : "Non");
+        // Fonction pour créer l'élément HTML pour chaque article
+        function createItemElement(id, name, quantity) {
+            const inventoryDiv = document.getElementById('inventory');
+            const itemDiv = document.createElement('div');
+            itemDiv.className = 'item';
+            itemDiv.id = id;
 
-        // Fonction addItem pour ajouter un nouvel article
+            const nameDisplay = document.createElement('span');
+            nameDisplay.textContent = name;
+            itemDiv.appendChild(nameDisplay);
+
+            // Bouton pour diminuer la quantité
+            const decrementButton = document.createElement('button');
+            decrementButton.textContent = '-';
+            decrementButton.onclick = () => updateQuantity(id, -1);
+            itemDiv.appendChild(decrementButton);
+
+            // Affichage de la quantité
+            const quantityDisplay = document.createElement('span');
+            quantityDisplay.textContent = ` ${quantity} `;
+            quantityDisplay.className = 'quantity';
+            itemDiv.appendChild(quantityDisplay);
+
+            // Bouton pour augmenter la quantité
+            const incrementButton = document.createElement('button');
+            incrementButton.textContent = '+';
+            incrementButton.onclick = () => updateQuantity(id, 1);
+            itemDiv.appendChild(incrementButton);
+
+            inventoryDiv.appendChild(itemDiv);
+        }
+
+        // Fonction pour ajouter un nouvel article
         function addItem() {
-            console.log("Bouton 'Ajouter' cliqué - Fonction addItem appelée");
-
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) {
-                console.error("Le nom de l'article est vide.");
+                alert("Veuillez entrer un nom pour l'article.");
                 return;
             }
 
@@ -58,36 +79,30 @@
                 quantity: 1
             };
 
-            // Ajout dans l'interface pour tester l'affichage
+            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+            items.push(newItem);
+            localStorage.setItem('inventoryItems', JSON.stringify(items));
             createItemElement(newItem.id, newItem.name, newItem.quantity);
-            document.getElementById('newItemName').value = ''; // Réinitialiser le champ texte
 
-            // Ajout à Firestore avec message de débogage
-            db.collection("inventoryItems").doc(newItem.id).set(newItem)
-                .then(() => {
-                    console.log("Article ajouté avec succès à Firestore :", newItem);
-                })
-                .catch((error) => {
-                    console.error("Erreur lors de l'ajout de l'article dans Firestore :", error);
-                });
+            document.getElementById('newItemName').value = ''; // Réinitialise le champ texte
         }
 
-        // Fonction pour créer un élément visuel pour chaque article
-        function createItemElement(id, name, quantity) {
-            const inventoryDiv = document.getElementById('inventory');
-            const itemDiv = document.createElement('div');
-            itemDiv.className = 'item';
-            itemDiv.id = id;
-
-            const nameDisplay = document.createElement('span');
-            nameDisplay.textContent = `${name} (Quantité: ${quantity})`;
-            itemDiv.appendChild(nameDisplay);
-
-            inventoryDiv.appendChild(itemDiv);
+        // Fonction pour mettre à jour la quantité d'un article
+        function updateQuantity(id, change) {
+            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
+            const item = items.find(item => item.id === id);
+            if (item) {
+                item.quantity = Math.max(0, item.quantity + change); // Empêche quantité négative
+                localStorage.setItem('inventoryItems', JSON.stringify(items));
+                loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
+            }
         }
 
-        // Ajouter directement l'événement "click" au bouton pour le rendre fonctionnel
-        document.getElementById("addButton").onclick = addItem;
+        // Associe la fonction d'ajout au bouton "Ajouter"
+        document.getElementById("addButton").addEventListener("click", addItem);
+
+        // Charger l'inventaire au démarrage
+        window.addEventListener("load", loadInventory);
     </script>
 </body>
 </html>
