--- a/index.html
+++ b/index.html
@@ -21,16 +21,43 @@
         <button id="addButton">Ajouter</button>
     </div>
 
+    <!-- Scripts Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script>
     <script>
-        // Fonction pour charger les articles depuis localStorage
-        function loadInventory() {
+        // Configuration Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBIFHYleTHOP-Jt-v294VWDkq9a9Udpzbs",
+            authDomain: "inventaire-poplab.firebaseapp.com",
+            projectId: "inventaire-poplab",
+            storageBucket: "inventaire-poplab.appspot.com",
+            messagingSenderId: "490095435720",
+            appId: "1:490095435720:web:5df23c49d4938e90086afd",
+            measurementId: "G-KSW6LY3WWN"
+        };
+
+        // Initialiser Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Fonction pour charger les articles depuis Firestore
+        async function loadInventory() {
             const inventoryDiv = document.getElementById('inventory');
             inventoryDiv.innerHTML = ''; // Réinitialiser l'affichage
 
-            const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
-            items.forEach(item => {
-                createItemElement(item.id, item.name, item.quantity);
-            });
+            try {
+                const snapshot = await db.collection("inventoryItems").get();
+                const items = [];
+                snapshot.forEach(doc => {
+                    const item = doc.data();
+                    items.push(item);
+                    createItemElement(item.id, item.name, item.quantity);
+                });
+                // Mettre à jour localStorage pour garder une copie locale
+                localStorage.setItem('inventoryItems', JSON.stringify(items));
+            } catch (error) {
+                console.error("Erreur lors du chargement de l'inventaire :", error);
+            }
         }
 
         // Fonction pour créer l'élément HTML pour chaque article
@@ -66,7 +93,7 @@
         }
 
         // Fonction pour ajouter un nouvel article
-        function addItem() {
+        async function addItem() {
             const newItemName = document.getElementById('newItemName').value.trim();
             if (!newItemName) {
                 alert("Veuillez entrer un nom pour l'article.");
@@ -79,20 +106,40 @@
                 quantity: 1
             };
 
+            // Ajouter l'article dans Firestore
+            try {
+                await db.collection("inventoryItems").doc(newItem.id).set(newItem);
+                console.log("Article ajouté à Firestore :", newItem);
+                createItemElement(newItem.id, newItem.name, newItem.quantity);
+            } catch (error) {
+                console.error("Erreur lors de l'ajout dans Firestore :", error);
+            }
+
+            // Mettre à jour localStorage
             const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
             items.push(newItem);
             localStorage.setItem('inventoryItems', JSON.stringify(items));
-            createItemElement(newItem.id, newItem.name, newItem.quantity);
 
             document.getElementById('newItemName').value = ''; // Réinitialise le champ texte
         }
 
         // Fonction pour mettre à jour la quantité d'un article
-        function updateQuantity(id, change) {
+        async function updateQuantity(id, change) {
             const items = JSON.parse(localStorage.getItem('inventoryItems')) || [];
             const item = items.find(item => item.id === id);
+
             if (item) {
                 item.quantity = Math.max(0, item.quantity + change); // Empêche quantité négative
+
+                // Mettre à jour Firestore
+                try {
+                    await db.collection("inventoryItems").doc(id).update({ quantity: item.quantity });
+                    console.log("Quantité mise à jour dans Firestore pour :", id);
+                } catch (error) {
+                    console.error("Erreur lors de la mise à jour de la quantité dans Firestore :", error);
+                }
+
+                // Mettre à jour localStorage et recharger l'inventaire
                 localStorage.setItem('inventoryItems', JSON.stringify(items));
                 loadInventory(); // Recharge l'inventaire pour mettre à jour l'affichage
             }
